k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timetable-web
  namespace: timetable
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
